--- a/agent/.classpath
+++ b/agent/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="lib" path="/knife.core/lib/misc.javassist-3.9.0.GA.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/fastjson-1.1.17-sources.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/fastjson-1.1.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
