--- a/client/.classpath
+++ b/client/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/knife.core"/>
 	<classpathentry kind="lib" path="/home/chenjw/software/jdk1.6.0_29/lib/tools.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
