--- a/core/.classpath
+++ b/core/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/java.j2ee-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA-sources.jar"/>
-	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA.jar" sourcepath="lib/misc.javassist-3.9.0.GA-sources.jar"/>
 	<classpathentry kind="lib" path="lib/sourceforge.spring-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/sourceforge.spring-2.5.6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
