--- a/test/.classpath
+++ b/test/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="/knife.core/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/knife.agent"/>
+	<classpathentry kind="lib" path="/knife.core/lib/aspectjrt.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/aspectjweaver.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
