--- a/agent/.classpath
+++ b/agent/.classpath
@@ -10,11 +10,11 @@
 	<classpathentry kind="lib" path="/knife.core/lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/java.j2ee-1.4.jar"/>
-	<classpathentry kind="lib" path="/knife.core/lib/misc.javassist-3.9.0.GA-sources.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/misc.javassist-3.9.0.GA.jar"/>
-	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6.jar"/>
-	<classpathentry kind="lib" path="/knife.core/lib/fastjson-1.1.17-sources.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/fastjson-1.1.17.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/fastjson-1.1.17-sources.zip"/>
+	<classpathentry kind="lib" path="/knife.core/lib/misc.javassist-3.9.0.GA-sources.zip"/>
+	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
