--- a/core/.classpath
+++ b/core/.classpath
@@ -9,9 +9,9 @@
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/java.j2ee-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA-sources.jar"/>
 	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA.jar" sourcepath="lib/misc.javassist-3.9.0.GA-sources.jar"/>
-	<classpathentry kind="lib" path="lib/sourceforge.spring-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/sourceforge.spring-2.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/misc.javassist-3.9.0.GA-sources.zip"/>
+	<classpathentry kind="lib" path="lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
