--- a/test/.classpath
+++ b/test/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/knife.core/lib/java.j2ee-1.4.jar"/>
-	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6.jar"/>
 	<classpathentry kind="lib" path="/home/chenjw/software/jdk1.6.0_29/lib/tools.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/commons-io-1.4.jar"/>
@@ -13,5 +12,6 @@
 	<classpathentry kind="lib" path="/knife.core/lib/aspectjrt.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/aspectjweaver.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
