--- a/test/.classpath
+++ b/test/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="/knife.core/lib/cglib-nodep-2.1_3.jar"/>
 	<classpathentry kind="lib" path="/knife.core/lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/knife.agent"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/knife.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/knife.server"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
