--- a/server/.classpath
+++ b/server/.classpath
@@ -7,10 +7,10 @@
 	<classpathentry kind="lib" path="/knife.lib/lib/misc.javassist-3.9.0.GA-sources.zip"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/misc.javassist-3.9.0.GA.jar" sourcepath="/knife.lib/lib/misc.javassist-3.9.0.GA-sources.zip"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/tools.jar"/>
-	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6-sources.zip"/>
-	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6.jar" sourcepath="/knife.lib/lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/fastjson-1.1.17-sources.zip"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/fastjson-1.1.17.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6-sources.zip"/>
+	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
