--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
        	<target name="build-client">
 		<local name="name"/>
 		<property name="name" value="client"/>
-  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false">
+  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false" encoding="UTF-8">
     			<src path="${base.dir}/${name}/java"/>
 			<src path="${base.dir}/core/java"/>
     			<include name="**/*.java"/>
@@ -62,7 +62,7 @@
        	<target name="build-agent">
 		<local name="name"/>
 		<property name="name" value="agent"/>
-  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false">
+  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false" encoding="UTF-8">
     			<src path="${base.dir}/${name}/java"/>
     			<include name="**/*.java"/>
 			<classpath>
@@ -83,7 +83,7 @@
        	<target name="build-server">
 		<local name="name"/>
 		<property name="name" value="server"/>
-  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false">
+  		<javac destdir="${build.classes.dir}/${name}" debug="on" includeantruntime="false" encoding="UTF-8">
     			<src path="${base.dir}/${name}/java"/>
 			<src path="${base.dir}/core/java"/>
     			<include name="**/*.java"/>
