--- a/client/.classpath
+++ b/client/.classpath
@@ -5,10 +5,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/jline-1.0.jar"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/hessian-4.0.7.jar"/>
-	<classpathentry kind="var" path="JAVA_HOME/lib/tools.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/knife.core"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/sinetfactory.jar"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/pmd-5.0.jar"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/asm-all-4.1.jar"/>
+	<classpathentry kind="lib" path="/knife.lib/lib/tools-linux.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
