--- a/test/.classpath
+++ b/test/.classpath
@@ -13,5 +13,8 @@
 	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6-sources.zip"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/sourceforge.spring-2.5.6.jar"/>
 	<classpathentry kind="lib" path="/knife.lib/lib/java.j2ee-1.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/knife.agent"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/knife.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/knife.server"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
